# pi-stock-ticker

./: .gitignore  LICENSE  README.md  config.ini  config.py  install_service.sh  main.py  pyproject.toml  stock_data.py  stock_ticker.py  uninstall_service.sh
