[project]
name = "pi-stock-ticker"
version = "0.1.0"
description = "Stock ticker display for Raspberry Pi with e-Paper display"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "pillow",
    "yfinance",
    "pytz",
    "pandas",
]
[tool.pip]
options = "--prefer-binary"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
