[project]
name = "pi-stock-ticker"
version = "0.1.0"
description = "Stock ticker display for Raspberry Pi with e-Paper display"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "pillow",
    "yfinance",
    "pytz",
    "pandas",
    "spidev",
    "RPi.GPIO",
    "gpiozero",
    "lgpio",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "stock_ticker", "stock_data", "config"]
